<resources>
    <string name="app_name">Dopamind+</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sos">SOS</string>
    <string name="just_hold_the_button_to_call">Just hold the button to call.</string>
    <string name="emergency">Emergency</string>
    <string name="back">Back</string>
    <string name="help_subtitle">Just hold the button to call.</string>
    <string name="not_sure_text">Not sure what to do?</string>
    <string name="sesak_nafas">Sesak Nafas, Harus Apa?</string>
    <string name="serangan_panik">Serangan Panik, Bagaimana?</string>
    <string name="bunuh_diri">Indikasi Bunuh Diri, Bagaimana?</string>
    <string name="more">More</string>
    <string name="emergency_center">Emergency Help\nNeeded?</string>
    <string name="hello_user">Hello, Wisnu</string>
    <string name="complete_profile">Complete your Profile</string>
    <string name="define_location">Define Location</string>
    <string name="location">Alton Apartment</string>
    <string name="profile">Profile</string>
    <string name="from_label">From</string>
    <string name="from_location">RSND Universitas Diponegoro</string>
    <string name="to_label">To</string>
    <string name="to_location">Kost Dhome</string>
    <string name="time_label">15 min</string>
    <string name="age_label">Age</string>
    <string name="age_value">19 Tahun</string>
    <string name="blood_type_label">Blood Type</string>
    <string name="blood_type_value">B</string>
    <string name="height_label">Height</string>
    <string name="height_value">173 cm</string>
    <string name="allergic_label">Allergic</string>
    <string name="allergic_value">None</string>
    <string name="condition_label">Condition</string>
    <string name="condition_value">Normal</string>
    <string name="phone_label">Phone</string>
    <string name="slide_to_cancel">Slide To Cancel</string>
    <string name="time_estimate">15 min</string>
    <string name="confirming">Confirming in 10...</string>
    <string name="weight_label">Weight</string>
    <string name="weight_value">60 KG</string>
</resources>