<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_weight="1"
            android:text="@string/emergency"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile_pict"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:background="#FFFFFF"/>
    </LinearLayout>

    <TextView
        android:id="@+id/help_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_hold_the_button_to_call"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/emergency_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/sos_button_container"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="150dp"
        android:layout_marginTop="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/sos_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_gradient"
            android:text="@string/sos"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            android:gravity="center"
            android:animation="@anim/pulse_animation" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/not_sure_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_sure_text"
        android:textSize="14sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/sos_button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/not_sure_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sesak_nafas"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/arrow_right"
                        android:contentDescription="@string/sesak_nafas"
                        app:tint="#A0A0A0" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/serangan_panik"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/arrow_right"
                        android:contentDescription="@string/serangan_panik"
                        app:tint="#A0A0A0" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bunuh_diri"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/arrow_right"
                        android:contentDescription="@string/bunuh_diri"
                        app:tint="#A0A0A0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/emergency_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/emergency_center"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_user"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete_profile"
                    android:textColor="@color/red"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/define_location"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/red"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
